--- a/src/main/webapp/WEB-INF/templates/common/header.html
+++ b/src/main/webapp/WEB-INF/templates/common/header.html
@@ -8,7 +8,7 @@
   <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
   <!--/* </editor-fold> */-->
   <header style="z-index: 1;">
-    <nav class="z-depth-2 blue-grey darken-4">
+    <nav class="z-depth-2 blue-grey darken-4" >
       <div class="nav-wrapper">
         <ul class="left">
           <li style="height: 56px;">
@@ -17,63 +17,85 @@
             </a>
           </li>
         </ul>
-        <ul id="nav-mobile" class="side-nav fixed" style="transform: translateX(0%);">
+        <ul id="nav-mobile" class="side-nav fixed" style="transform: translateX(0%);background-color: #f2fddb ">
           <li class="logo">
             <a id="logo-container" th:href="@{${adminPath}+'/main'}" class="brand-logo">
-              <img src="../../../static/application/image/logo.png" alt="logo" class="center-block"/>
+              <!--<img src="../../../static/application/image/logo.png" alt="logo" class="center-block" />-->
+              <a th:if="${loginUser.getUsername()=='junpai'}">
+                <img src="../../../static/application/image/20180525.jpg" alt="logo" class="center-block" style="height: 150px;width: 150px;margin-left: 50px" />
+              </a>
+              <a th:if="${loginUser.getUsername()=='xm'}">
+                <img src="../../../static/application/image/logo.png" alt="logo" class="center-block" />
+              </a>
             </a>
           </li>
           <th:block th:switch="${module}">
             <li class="active" th:case="'index'">
-              <a th:href="@{${adminPath}+'/main'}" class="waves-effect waves-teal">首页</a>
+              <a th:href="@{${adminPath}+'/main'}" class="waves-effect waves-teal">后台首页<i class="material-icons">arrow_forward_ios</i> </a>
             </li>
             <li th:case="*">
-              <a th:href="@{${adminPath}+'/main'}" class="waves-effect waves-teal">首页</a>
+              <a th:href="@{${adminPath}+'/main'}" class="waves-effect waves-teal">后台首页<i class="material-icons">arrow_forward_ios</i> </a>
             </li>
           </th:block>
           <th:block th:switch="${module}">
             <li class="active" th:case="'machine'">
-              <a th:href="@{${adminPath}+'/advertisementMachine/list/1'}" class="waves-effect waves-teal">广告机</a>
+              <a th:href="@{${adminPath}+'/advertisementMachine/list/1'}" class="waves-effect waves-teal" >路灯管理<i class="material-icons">format_paint</i></a>
             </li>
             <li th:case="*">
-              <a th:href="@{${adminPath}+'/advertisementMachine/list/1'}" class="waves-effect waves-teal">广告机</a>
+              <a th:href="@{${adminPath}+'/advertisementMachine/list/1'}" class="waves-effect waves-teal">路灯管理<i class="material-icons">format_paint</i></a>
+            </li>
+          </th:block>
+          <th:block th:switch="${module}">
+            <li class="active" th:case="'atmosphere'">
+              <a th:href="@{${adminPath}+'/atmosphere/list'}" class="waves-effect waves-teal" >大气采集<i class="material-icons">wb_sunny</i></a>
+            </li>
+            <li th:case="*">
+              <a th:href="@{${adminPath}+'/atmosphere/list'}" class="waves-effect waves-teal">大气采集<i class="material-icons">wb_sunny</i></a>
             </li>
           </th:block>
           <th:block th:switch="${module}">
             <li class="active" th:case="'advertisement'">
-              <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告</a>
+              <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告管理<i class="material-icons">format_indent_increase</i></a>
             </li>
             <li th:case="*">
-              <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告</a>
+              <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告管理<i class="material-icons">format_indent_increase</i></a>
             </li>
           </th:block>
           <th:block th:switch="${module}">
-            <li class="active" th:case="'informationPush'">
-              <a th:href="@{${adminPath}+'/baiduMap/map'}" class="waves-effect waves-teal">视图</a>
+            <li class="active" th:case="'baiduMap'">
+              <a th:href="@{${adminPath}+'/baiduMap/map'}" class="waves-effect waves-teal">灯杆地图<i class="material-icons">location_on</i></a>
             </li>
             <li th:case="*">
-              <a th:href="@{${adminPath}+'/baiduMap/map'}" class="waves-effect waves-teal">视图</a>
+              <a th:href="@{${adminPath}+'/baiduMap/map'}" class="waves-effect waves-teal">灯杆地图<i class="material-icons">location_on</i></a>
+            </li>
+          </th:block>
+          <th:block th:switch="${module}">
+            <li class="active" th:case="'monitor'">
+              <a th:href="@{${adminPath}+'/monitor/Monitorlist'}" class="waves-effect waves-teal">监控管理<i class="material-icons">missed_video_call</i></a>
+            </li>
+            <li th:case="*">
+              <a th:href="@{${adminPath}+'/monitor/Monitorlist'}" class="waves-effect waves-teal">监控管理<i class="material-icons">missed_video_call</i></a>
             </li>
           </th:block>
           <th:block th:switch="${module}">
             <li class="active" th:if="${loginUser.roleID==adminRoleID}" th:case="'user'">
-              <a th:href="@{${adminPath}+'/user/list/1'}" class="waves-effect waves-teal">用户</a>
+              <a th:href="@{${adminPath}+'/user/list/1'}" class="waves-effect waves-teal">用户管理<i class="material-icons">perm_identity</i></a>
             </li>
             <li th:if="${loginUser.roleID==adminRoleID}" th:case="*">
-              <a th:href="@{${adminPath}+'/user/list/1'}" class="waves-effect waves-teal">用户</a>
+              <a th:href="@{${adminPath}+'/user/list/1'}" class="waves-effect waves-teal">用户管理<i class="material-icons">perm_identity</i></a>
             </li>
           </th:block>
           <th:block th:switch="${module}">
             <li class="active" th:if="${loginUser.roleID==adminRoleID}" th:case="'role'">
-              <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色</a>
+              <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色管理<i class="material-icons">face</i></a>
             </li>
             <li th:if="${loginUser.roleID==adminRoleID}" th:case="*">
-              <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色</a>
+              <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色管理<i class="material-icons">face</i></a>
             </li>
           </th:block>
         </ul>
         <ul class="right">
-          <li th:text="|${loginUser.username}, 欢迎|"></li>
+          <li th:text="|${loginUser.username}, 欢迎|" ></li>
           <li>
             <a class="dropdown-button" href="#" data-activates="dropdown-menu">
               <i class="material-icons right">account_circle</i>
