增加，地图标注、大气采集、灯杆管理、监控管理用户拦截功能。 新增后台切换用户时切换后台显示的公司信息和LOGO功能

--- a/src/main/webapp/WEB-INF/templates/system/login.html
+++ b/src/main/webapp/WEB-INF/templates/system/login.html
@@ -11,14 +11,14 @@
     <div class="pattern active" style="background-image: url('../../../static/application/image/stars.jpg');"></div>
   </div>
   <div class="nav-wrapper container">
-    <a href="#" itemprop="url" class="brand-logo" th:if="${loginUser.getUsername()=='junpai'}">
-      <!--<img src="../../../static/application/image/logo.png" class="nav-logo-img"/>-->
-      <img src="../../../static/application/image/2018052502.jpg" class="nav-logo-img" style="margin-left: 400px"/>
-    </a>
-    <a href="#" itemprop="url" class="brand-logo" th:if="${loginUser.getUsername()=='xm'}">
-      <!--<img src="../../../static/application/image/logo.png" class="nav-logo-img"/>-->
-      <img src="../../../static/application/image/logo.png" class="nav-logo-img" style="margin-left: 400px"/>
-    </a>
+    <!--<a href="#" itemprop="url" class="brand-logo" th:if="${loginUser.getUsername()=='junpai'}">-->
+      <!--&lt;!&ndash;<img src="../../../static/application/image/logo.png" class="nav-logo-img"/>&ndash;&gt;-->
+      <!--<img src="../../../static/application/image/2018052502.jpg" class="nav-logo-img" style="margin-left: 400px"/>-->
+    <!--</a>-->
+    <!--<a href="#" itemprop="url" class="brand-logo" th:if="${loginUser.getUsername()=='xm'}">-->
+      <!--&lt;!&ndash;<img src="../../../static/application/image/logo.png" class="nav-logo-img"/>&ndash;&gt;-->
+      <!--<img src="../../../static/application/image/logo.png" class="nav-logo-img" style="margin-left: 400px"/>-->
+    <!--</a>-->
   </div>
 </nav>
 <!-- <editor-fold desc="login card"> -->
