修复退出后登陆界面错乱BUG

--- a/src/main/webapp/WEB-INF/templates/system/login.html
+++ b/src/main/webapp/WEB-INF/templates/system/login.html
@@ -10,20 +10,11 @@
   <div class="nav-background">
     <div class="pattern active" style="background-image: url('../../../static/application/image/stars.jpg');"></div>
   </div>
-  <div class="nav-wrapper container">
-    <!--<a href="#" itemprop="url" class="brand-logo" th:if="${loginUser.getUsername()=='junpai'}">-->
-      <!--&lt;!&ndash;<img src="../../../static/application/image/logo.png" class="nav-logo-img"/>&ndash;&gt;-->
-      <!--<img src="../../../static/application/image/2018052502.jpg" class="nav-logo-img" style="margin-left: 400px"/>-->
-    <!--</a>-->
-    <!--<a href="#" itemprop="url" class="brand-logo" th:if="${loginUser.getUsername()=='xm'}">-->
-      <!--&lt;!&ndash;<img src="../../../static/application/image/logo.png" class="nav-logo-img"/>&ndash;&gt;-->
-      <!--<img src="../../../static/application/image/logo.png" class="nav-logo-img" style="margin-left: 400px"/>-->
-    <!--</a>-->
-  </div>
+
 </nav>
 <!-- <editor-fold desc="login card"> -->
 <div id="login-card" class="row">
-  <div class="col s12 m6 l4 offset-m6 offset-l6" style="margin-left: 500px">
+  <div class="col s12 m6 l4 offset-m6 offset-l6" style="margin-left: 500px;margin-top: 100px">
     <div class="card card-panel hoverable blue-grey darken-1" >
       <div class="card-content white-text">
         <span class="card-title center-align">广告机管理后台 登录</span>
