--- a/src/main/webapp/WEB-INF/templates/common/header.html
+++ b/src/main/webapp/WEB-INF/templates/common/header.html
@@ -21,12 +21,8 @@
           <li class="logo">
             <a id="logo-container" th:href="@{${adminPath}+'/main'}" class="brand-logo">
               <!--<img src="../../../static/application/image/logo.png" alt="logo" class="center-block" />-->
-              <a th:if="${loginUser.getUsername()=='junpai'}">
-                <img src="../../../static/application/image/20180525.jpg" alt="logo" class="center-block" style="height: 150px;width: 150px;margin-left: 50px" />
-              </a>
-              <a th:if="${loginUser.getUsername()=='xm'}">
-                <img src="../../../static/application/image/logo.png" alt="logo" class="center-block" />
-              </a>
+                <img th:if="${loginUser.getUsername()=='junpai'}" src="../../../static/application/image/20180525.jpg" alt="logo" class="center-block" style="height: 150px;width: 150px;margin-left: 50px" />
+                <img th:if="${loginUser.getUsername()=='xm'}" src="../../../static/application/image/logo.png" alt="logo" class="center-block" />
             </a>
           </li>
           <th:block th:switch="${module}">
