--- a/src/main/webapp/WEB-INF/templates/baiduMap/baiduMap.html
+++ b/src/main/webapp/WEB-INF/templates/baiduMap/baiduMap.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
-         html {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
+        html {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
     </style>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=XzxEh6hT4dGzncjHCQEv9KLFEDOtaOQW"></script>
     <title>批量转换</title>
@@ -16,8 +16,7 @@
     <ul>
         <li>
             <a class="btn-floating green waves-effect waves-light tooltipped" data-position="top"
-               data-delay="50" data-tooltip="查看所有灯杆显示"
-               th:onclick="'javascript:index()'">
+               data-delay="50" data-tooltip="查看所有灯杆显示" th:onclick="'javascript:index()'">
                 <i class="material-icons">location_on</i>
             </a>
         </li>
@@ -30,7 +29,7 @@
 </html>
 <script type="text/javascript">
     var convertor = new BMap.Convertor();
-    var points;
+    var points =[];
     var map = new BMap.Map("allmap");
     map.centerAndZoom(new BMap.Point(113.573229,22.377734), 15);
     function index() {
@@ -38,18 +37,22 @@
             url:'[[${adminPath}]]/baiduMap/index',
             type:"GET",
             success:function (data) {
-                for (var index in data){
-                    points = [new BMap.Point(data[index].longitude,data[index].latitude)];
-                    translateCallback = function (data){
-                        if(data.status === 0) {
-                            map.addOverlay(new BMap.Marker(points[index]));
-                            map.setCenter(data.points[index]);
-                        }
+                function add() {
+                    for (var index in data) {
+                        points=points.concat([new BMap.Point(data[index].longitude, data[index].latitude)]);
                     }
-                    setTimeout(function(){
-                        convertor.translate(points, 1, 5, translateCallback)
-                    }, 1000);
                 }
+                add();
+                translateCallback = function (data){
+                    for (var i = 0; i < points.length; i++) {
+                        map.addOverlay(new BMap.Marker(points[i]));
+                        map.setCenter(points[i]);
+                    }
+                }
+                setTimeout(function(){
+                    var convertor = new BMap.Convertor();
+                    convertor.translate(points, 1, 5, translateCallback)
+                }, 1000);
             },error:function () {
                 alert("操作失败")
             }
@@ -60,7 +63,8 @@
     map.centerAndZoom(point,12);
 
     var geolocation = new BMap.Geolocation();
-    geolocation.getCurrentPosition(function(r){console.log(r.point)
+    geolocation.getCurrentPosition(function(r){
+        console.log(r.point)
         if(this.getStatus() == BMAP_STATUS_SUCCESS){
             var mk = new BMap.Marker(r.point);
             map.addOverlay(mk);//标出所在地
